--- a/app/src/main/res/layout/view_layout_camera.xml
+++ b/app/src/main/res/layout/view_layout_camera.xml
@@ -17,9 +17,21 @@
 
 
     <RelativeLayout
-        android:visibility="invisible"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <Button
+            android:layout_alignParentEnd="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/btn_setting"
+            android:background="@drawable/ic_settings_black_24dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp" />
+
+
 
         <Button
             android:layout_alignParentBottom="true"
@@ -37,6 +49,7 @@
             android:text="闪光灯"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:visibility="invisible"
             android:id="@+id/btn_light_view_layout"/>
 
 
